Dev 15874 (#2997)
* RM15874: Allow user to enter a toDate after current date in a timesheet.

* RM15874: Improve process to check the validity of timesheet dates.

* RM15874: Code refactoring.